# resc-backend

./: .dockerignore  .gitignore  .isort.cfg  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: backend-ci.yaml  scorecard.yml
alembic/: README.md  env.py
alembic/versions/: 26cf7ab95d3a_add_boolean_is_latest_to_scan_and_audit.py  2a1def4ac814_add_deleted_at_column_to_repositories.py  38bccf177626_fix_fk.py  51139a2e56a4_add_indexes.py  531cbc7fa0ce_add_field_is_dir_scan_to_findings.py  5db99c754f9d_is_latest_index.py  6c6d15b4cb06_remove_audit_under_review.py  92408b065681_populate_is_latest_in_scan_and_audit.py  93b9238ea4ba_index_creation_for_finding_table.py  d9e5073bee35_add_comment_filed_from_rule.py  e453b2238001_init_database.py
rootfs/: uv-installer.sh
src/resc_backend/: constants.py
src/resc_backend/db/: connection.py  engine_azure.py
src/resc_backend/db/model/: __init__.py  finding.py  rule.py  vcs_instance.py
src/resc_backend/helpers/: git_operation.py
src/resc_backend/helpers/rabbitmq/: configuration.py  rabbitmq_initialization.py
src/resc_backend/resc_web_service/: api.py  cache_manager.py  configuration.py  dependencies.py  filters.py
src/resc_backend/resc_web_service/crud/: audit.py  detailed_finding.py  finding.py  repository.py  rule.py  rule_pack.py  rule_tag.py  scan.py  scan_finding.py  vcs_instance.py
src/resc_backend/resc_web_service/endpoints/: audits.py  findings.py  metrics.py  repositories.py  rule_packs.py  rules.py  scans.py
src/resc_backend/resc_web_service/helpers/: resc_swagger_models.py  rule.py
src/resc_backend/resc_web_service/schema/: audit.py  detailed_finding.py  finding.py  finding_count_model.py  pagination_model.py  repository.py  repository_enriched.py  rule.py  rule_allow_list.py  rule_count_model.py  (+1 more)
src/resc_backend/static/: logging.ini
test_data/: database_dummy_data.sql  drop_tables.sql  envdata.py  insert_test_data.py  remove_test_data.py
tests/newman_tests/: RESC_web_service.postman_collection.json  RESC_web_service.postman_collection.yaml  RESC_web_service.postman_collection_bck.json  postman_collection_test_degenerator.py  postman_collection_test_generator.py  run_newman_local.sh  run_newman_tests.sh
tests/newman_tests/src/: input_models.py  mappings.py  output_models.py  yaml_dumper.py
tests/resc_backend/helpers/: test_dict_remapper.py  test_environment_wrapper.py  test_git_operation.py  test_list_mapper.py
tests/resc_backend/resc_web_service/: test_cache_manager.py  test_dependencies.py  test_filters.py
tests/resc_backend/resc_web_service_interface/: test_client_findings.py  test_client_repositories.py  test_client_rule_packs.py  test_client_scans.py  test_client_vcs_instances.py
tests/zap_tests/: run_zap_api_tests.sh
(+23 files in other folders)
