[project]
name = "resc-backend"
version = "3.5.8"
description = "Repository Scanner - Backend"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
authors = [
    {"email"="resc@nl.abnamro.com"}
]
dependencies = [
    "aiofiles==0.8.0",
    "alembic==1.14.1",
    "amqp==5.3.1",
    "azure-identity==1.20.0",
    "celery==5.4.0",
    "cryptography==44.0.1",
    "fastapi==0.115.8",
    "fastapi-cache2==0.2.2",
    "packaging==24.2",
    "pydantic==2.10.6",
    "pyjwt[crypto]==2.10.1",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "requests==2.32.3",
    "setuptools==75.8.0",
    "sqlalchemy==2.0.38",
    "tenacity==9.0.0",
    "tomlkit==0.13.2",
    "uvicorn==0.34.0",
    "waitress==3.0.2",
]

[project.urls]
"Source"="https://github.com/abnamro/resc-backend"

[project.scripts]
resc_initialize_rabbitmq_users = "resc_backend.bin.rabbitmq_bootup:bootstrap_rabbitmq_users"

[tool.uv]
package = true

[tool.ruff]
# easier on the lines
line-length = 120
indent-width = 4
target-version = "py312"
src=["src"]

[tool.ruff.format]
exclude = ["alembic/*"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # flake8-builtins
    "A",
    # pyupgrade
    "UP",
    # pep8-naming
    "N",
    # flake8-bugbear
    # "B",
    # flake8-annotations
    # "ANN",
    # isort
    "I",
    ]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = [
    "I",
    "E501"
    ] # Line too long (143 > 120)
"tests/*" = ["ANN"]

[dependency-groups]
dev = [
    "coverage==7.6.12",
    "httpx==0.28.1",
    "mock==5.1.0",
    "pyodbc==5.1.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "pyyaml==6.0.2",
    "ruff==0.9.6",
    "tox==4.24.1",
]

