[project]
name = "resc-backend"
version = "3.5.8"
description = "Repository Scanner - Backend"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
authors = [
    {"email"="resc@nl.abnamro.com"}
]

[project.urls]
"Source"="https://github.com/abnamro/resc-backend"

[project.scripts]
resc_initialize_rabbitmq_users = "resc_backend.bin.rabbitmq_bootup:bootstrap_rabbitmq_users"

[tool.uv]
package = true

[tool.ruff]
# easier on the lines
line-length = 120
indent-width = 4
target-version = "py312"
src=["src"]

[tool.ruff.format]
exclude = ["alembic/*"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # flake8-builtins
    "A",
    # pyupgrade
    "UP",
    # pep8-naming
    "N",
    # flake8-bugbear
    # "B",
    # flake8-annotations
    # "ANN",
    # isort
    "I",
    ]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = [
    "I",
    "E501"
    ] # Line too long (143 > 120)
"tests/*" = ["ANN"]
